Opened 18 years ago

Closed 18 years ago

#702 closed bug (fixed)

[SoundPlay] 4.7.3 freeze app_server

Reported by: diver Owned by: axeld
Priority: blocker Milestone: R1
Component: System/Kernel Version:
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by axeld)

SoundPlay crashes on launch, but if you rename Plugins folder to something else, you could actualy run it. If you go to Preferences or just close SoundPlay app_server will freeze. If you then press F12, computer will reboot, danger!

There is also many more problems with SoundPlay like replicant screen corruption, buttons not drawn correctly, etc. I will open another bugs for those as soon as this crash will be fixed.

Change History (9)

comment:1 by axeld, 18 years ago

Description: modified (diff)
Platform: All

Can you provide a link to this old version? I only have the most recent one around.

comment:2 by axeld, 18 years ago

Component: GeneralUser Interface/Application Server

comment:4 by axeld, 18 years ago

Thanks! Unfortunately, I always get "connection refused".

comment:7 by axeld, 18 years ago

I have it now, thanks! The original link started to work some time later. Can you leave it online for a while in case others want to have a look there as well?

comment:8 by diver, 18 years ago

83.14.10.130 is a www.sabe.pl server.

comment:9 by axeld, 18 years ago

Component: User Interface/app_serverKernel
Resolution: fixed
Status: newclosed

Fixed in hrev18683 - it was actually a kernel bug, not an app_server bug (it didn't freeze, it was killed, like everybody else...)

Note: See TracTickets for help on using tickets.