kill_thread() and friends are supposed to check the passed in thread_id or else some signals could go to some group when a negative value was passed in. This actually fixes bug #702 where SoundPlay obviously does a kill_thread(-1) at the end (which accidently killed all userspace applications, including the input_server, app_server, ...).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@18683 a95241bf-73f2-0310-859d-f6bbb57e9c96